--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,24 +17,24 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/bullet/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/enemy.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://objects/bullet/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History,Commit (241)"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://teste/teste.tscn", "res://player/player.tscn", "res://objects/bullet/bullet.tscn", "res://enemies/c.tscn", "res://map/uff_floor2.tscn", "res://map/uff_floor1.tscn", "res://UI/change_scene.tscn")
-current_scene="res://UI/change_scene.tscn"
+current_scene="res://player/player.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=14
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/change_scene.gd", "res://scripts/game_manager.gd", "res://scripts/go_to_scene.gd", "res://scripts/health_bar.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://teste/teste_life.gd"]
+open_scripts=["res://scripts/bullet.gd", "res://scripts/change_scene.gd", "res://scripts/enemy.gd", "res://scripts/game_manager.gd", "res://scripts/go_to_scene.gd", "res://scripts/health_bar.gd", "res://scripts/level.gd", "res://scripts/player.gd", "res://teste/teste_life.gd"]
 selected_script="res://scripts/player.gd"
 open_help=[]
 script_split_offset=168
