Adição de customização do personagem

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/in_game_control_ui.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://objects/chest/", "res://addons/", "res://addons/input_keys/Keyboard & Mouse/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/game_manager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://scripts/", "res://game/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game/game.tscn", "res://dungeon/dungeon.tscn", "res://room/room.tscn", "res://player/player.tscn", "res://map/uff_floor1.tscn", "res://UI/settings_ui.tscn", "res://UI/control_ui.tscn", "res://UI/menu_ui.tscn", "res://UI/in_game_settings_ui.tscn", "res://UI/in_game_control_ui.tscn")
-current_scene="res://game/game.tscn"
+open_scenes=PackedStringArray("res://game/game.tscn", "res://dungeon/dungeon.tscn", "res://room/room.tscn", "res://player/player.tscn", "res://map/uff_floor1.tscn", "res://UI/player_customizer.tscn", "res://UI/play_ui.tscn")
+current_scene="res://UI/player_customizer.tscn"
 center_split_offset=-224
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/control_ui.gd", "res://game/game.gd", "res://scripts/game_manager.gd", "res://scripts/in_game_control_ui.gd", "res://scripts/in_game_settings_ui.gd", "res://scripts/menu_ui.gd", "res://scripts/player.gd", "res://scripts/settings_ui.gd"]
-selected_script="res://scripts/control_ui.gd"
+open_scripts=["res://scripts/control_ui.gd", "res://game/game.gd", "res://scripts/game_manager.gd", "res://scripts/player.gd", "res://scripts/player_customizer.gd", "res://scripts/play_ui.gd", "res://scripts/settings_ui.gd"]
+selected_script="res://scripts/player_customizer.gd"
 open_help=[]
 script_split_offset=168
 list_split_offset=0
@@ -43,9 +43,9 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://player/player.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://player/player.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
