--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../../home/lucas/Área de trabalho/Enter the uff/Windows/Enter the uff.exe"
+export_path="C:/Users/lucas/Desktop/Enter the UFF/Windows/Enter the UFF.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../../home/lucas/Área de trabalho/Enter the uff/Linux/Enter the UFF.x86_64"
+export_path="C:/Users/lucas/Desktop/Enter the UFF/Linux/Enter the UFF.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -114,7 +114,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../../home/lucas/Área de trabalho/Enter the uff/Linux/Enter the UFF.x86_32"
+export_path="C:/Users/lucas/Desktop/Enter the UFF/Linux/Enter the UFF.x86_32"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
