--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/menu_ui.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://scripts/guns_scripts/", "res://guns/")
+dock_filesystem_selected_paths=PackedStringArray("res://UI/change_scene.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player/player.tscn", "res://dungeon/dungeon.tscn", "res://map/uff_floor1.tscn", "res://UI/inventory_interface.tscn", "res://UI/main_interface.tscn")
-current_scene="res://UI/main_interface.tscn"
+open_scenes=PackedStringArray("res://player/player.tscn", "res://dungeon/dungeon.tscn", "res://map/uff_floor1.tscn", "res://UI/inventory_interface.tscn", "res://UI/main_interface.tscn", "res://UI/play_ui.tscn", "res://UI/change_scene.tscn")
+current_scene="res://UI/play_ui.tscn"
 center_split_offset=-253
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://game/game.gd", "res://scripts/game_manager.gd", "res://scripts/go_back.gd", "res://scripts/guns.gd", "res://scripts/inventory_button.gd", "res://scripts/inventory_interface.gd", "res://scripts/item.gd", "res://scripts/main_interface.gd", "res://scripts/menu_ui.gd", "res://scripts/pc.gd", "res://scripts/player.gd", "res://scripts/guns_scripts/sniper.gd"]
-selected_script="res://scripts/menu_ui.gd"
+open_scripts=["res://scripts/change_scene.gd", "res://scripts/enemy.gd", "res://game/game.gd", "res://scripts/game_manager.gd", "res://scripts/go_back.gd", "res://scripts/guns.gd", "res://scripts/inventory_button.gd", "res://scripts/inventory_interface.gd", "res://scripts/item.gd", "res://scripts/main_interface.gd", "res://scripts/player.gd", "res://scripts/play_ui.gd"]
+selected_script="res://scripts/player.gd"
 open_help=["Node"]
 script_split_offset=168
 list_split_offset=0
