Adição de loot box para obtenção de moedas e armas

--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -250,6 +250,22 @@ groups=[&"Gun"]
 
 groups=[&"Gun"]
 
+[res://objects/itens/ssd.tscn]
+
+groups=[&"Item"]
+
+[res://objects/itens/pendrive.tscn]
+
+groups=[&"Item"]
+
+[res://objects/itens/hd.tscn]
+
+groups=[&"Item"]
+
+[res://objects/itens/nvme.tscn]
+
+groups=[&"Item"]
+
 [res://player/player.tscn]
 
 groups=[&"player"]
