Correção de bugs, update de UI e adição de customização do player in-game

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://UI/PANEL/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://objects/itens/")
+dock_filesystem_selected_paths=PackedStringArray("res://UI/change_scene.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player/player.tscn", "res://dungeon/dungeon.tscn", "res://map/uff_floor1.tscn", "res://UI/inventory_interface.tscn", "res://UI/main_interface.tscn", "res://UI/open_disk_interface.tscn")
-current_scene="res://UI/inventory_interface.tscn"
+open_scenes=PackedStringArray("res://player/player.tscn", "res://dungeon/dungeon.tscn", "res://map/uff_floor1.tscn", "res://UI/main_interface.tscn", "res://UI/shop_interface.tscn", "res://UI/change_scene.tscn")
+current_scene="res://player/player.tscn"
 center_split_offset=-253
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/ammo_ui.gd", "res://scripts/game_manager.gd", "res://scripts/go_back.gd", "res://scripts/guns.gd", "res://scripts/inventory_button.gd", "res://scripts/inventory_interface.gd", "res://scripts/item.gd", "res://scripts/main_interface.gd", "res://scripts/open_disk_interface.gd", "res://scripts/pc.gd", "res://scripts/player.gd"]
-selected_script="res://scripts/item.gd"
+open_scripts=["res://scripts/ammo_ui.gd", "res://scripts/game_manager.gd", "res://scripts/go_back.gd", "res://scripts/guns.gd", "res://scripts/inventory_button.gd", "res://scripts/inventory_interface.gd", "res://scripts/item.gd", "res://scripts/main_interface.gd", "res://scripts/menu_ui.gd", "res://scripts/open_disk_interface.gd", "res://scripts/pc.gd", "res://scripts/player.gd", "res://scripts/play_ui.gd", "res://scripts/power_up.gd", "res://scripts/shop_interface.gd"]
+selected_script="res://scripts/player.gd"
 open_help=[]
 script_split_offset=168
 list_split_offset=0
@@ -46,9 +46,9 @@ window_screen_rect=Rect2i(1920, 6, 1920, 1020)
 
 [ShaderEditor]
 
-open_shaders=["res://player/player.gdshader"]
+open_shaders=["res://player/player.gdshader", "", "res://UI/icon.gdshader"]
 split_offset=0
-selected_shader="res://player/player.gdshader"
+selected_shader="res://UI/icon.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
