--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -29,6 +29,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/player.gd"
 }, {
+"base": &"RefCounted",
+"class": &"PowerUp",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/power_up.gd"
+}, {
 "base": &"Area2D",
 "class": &"Shoot",
 "icon": "",
