Adição de novos upgrades no shop, adição da mecânica de estamina ao player, alteração do funcionamento dos baús

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/item.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/SCRIPT/", "res://shop items/", "res://scripts/", "res://objects/", "res://objects/chest/", "res://map/", "res://addons/", "res://addons/ui/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/inventory_button.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://scripts/", "res://objects/chest/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,21 +28,24 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player/player.tscn", "res://dungeon/dungeon.tscn", "res://objects/life_drop/life_drop.tscn", "res://map/uff_floor1.tscn", "res://map/uff_floor2.tscn", "res://UI/control_ui.tscn", "res://UI/in_game_control_ui.tscn")
-current_scene="res://UI/in_game_control_ui.tscn"
+open_scenes=PackedStringArray("res://game/game.tscn", "res://UI/open_chest.tscn", "res://objects/chest/chest.tscn", "res://UI/health_bar.tscn", "res://player/player.tscn", "res://UI/main_interface.tscn")
+current_scene="res://UI/main_interface.tscn"
 center_split_offset=-254
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://UI/SCRIPT/button.gd", "res://scripts/change_controls.gd", "res://scripts/game_manager.gd", "res://scripts/go_to_scene.gd", "res://scripts/in_game_control_ui.gd", "res://scripts/item.gd", "res://scripts/player.gd", "res://scripts/power_shoot.gd"]
-selected_script="res://UI/SCRIPT/button.gd"
+open_scripts=["res://scripts/player.gd", "res://scripts/shoot.gd"]
+selected_script="res://scripts/shoot.gd"
 open_help=[]
 script_split_offset=168
 list_split_offset=0
 zoom_factor=1.07143
+window_rect=Rect2i(1920, 35, 1920, 991)
+window_screen=1
+window_screen_rect=Rect2i(1920, 6, 1920, 1020)
 
 [ShaderEditor]
 
